--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/Amazon_icon.svg.svg
     " />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>amazon-clone</title>
+    <title>Ecommerce Website</title>
   </head>
   <body>
     <div id="root"></div>
